--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ bcrypt==4.0.1
 motor==3.7.1
 email_validator==2.2.0
 gunicorn==23.0.0
+pymongo==4.13.0
 pydantic==2.11.5
 pytz==2025.2
 python-dotenv==1.1.0
